# sweetcrust_api

./: .env.example  .env.production.example  .gitignore  Makefile  README.md  SERVICE_PORTS.md  docker-compose.prod.yml  docker-compose.yml  dump.rdb  pyproject.toml
.github/workflows/: deploy.yml
deploy/hostinger/: GITHUB_ACTIONS.md  README.md  SSH_STATUS.md  bootstrap-github-secrets.sh  check-ssh.sh  console-bootstrap.sh  deploy.sh  fix-mysql-password.sh  issue-cert.sh  render-env.sh  setup-vps.sh  sync-env-to-github.sh
gateway/: .env.example  Dockerfile  README.md  package-lock.json  package.json
gateway/src/: app.ts  loadEnv.ts
nginx/: admin.skbakery.in.conf  nginx.conf  nginx.prod.active.conf  nginx.prod.bootstrap.conf  nginx.prod.conf  nginx.prod.with-admin.conf
package/: README.md  __init__.py  check_package.py  pyproject.toml
package/common/: __init__.py  base.py  env.py  errors.py  factory.py  lifecycle.py  mail.py  middleware.py  rate_limit.py  routing.py  schemas.py  settings.py  shop_hours.py
package/common/auth/: __init__.py  blacklist.py  guards.py  jwt.py  user_deps.py
package/common/utils/: __init__.py  datetime.py  helpers.py
package/database/: __init__.py  async_session.py  session.py
package/dto/: README.md  __init__.py
package/events/: __init__.py  topics.py
package/logger/: __init__.py  setup.py  startup.py
package/metrics/: __init__.py
package/redis/: __init__.py  client.py  locks.py
realtime/: .env.example  Dockerfile  README.md  package-lock.json  package.json
realtime/src/: loadEnv.ts  server.ts
scripts/: dev-all.sh  dev-service.sh  load-env.sh  uv-check.sh
services/_shared/: fastapi_service.py
services/admin_service/: Dockerfile  README.md  pyproject.toml
services/ai_service/: Dockerfile  README.md  main.py  pyproject.toml
services/ai_service/app/: check.py  main.py
services/ai_service/app/brain/: __init__.py  guardrails.py  llm.py  monitor.py
services/ai_service/app/brain/agents/: __init__.py  chatbot_agent.py  chatbot_faq_check.py  insights_agent.py  product_agent.py  return_agent.py
services/ai_service/app/brain/graphs/: __init__.py  chatbot_graph.py
services/ai_service/app/brain/parser/: __init__.py  chatbot.py  product.py  returns.py
services/ai_service/app/brain/prompts/: __init__.py  chatbot.py  guardrails.py  insights.py  product.py  return_assessment.py
services/ai_service/app/brain/rag/: __init__.py  documents.py  pipeline.py  pipeline_check.py  retriever.py
services/ai_service/app/brain/tools/: __init__.py  support_tools.py
services/ai_service/app/config/: settings.py
services/ai_service/app/controllers/: ai_async.py
services/ai_service/app/models/: __init__.py  catalog.py  commerce.py  ops.py  user.py
services/ai_service/app/producers/: __init__.py  events.py
services/ai_service/app/routes/: __init__.py  api.py  main.py
services/ai_service/app/schemas/: __init__.py  ai.py
services/ai_service/app/services/: __init__.py  ai_async.py  calls.py  category_image.py  chat.py  notify.py  security.py  vision.py
services/analytics_service/: Dockerfile  main.py  (+2 more)
services/commerce_service/: Dockerfile  README.md  main.py  pyproject.toml
services/commerce_service/app/: check.py  main.py
services/commerce_service/app/config/: settings.py
services/commerce_service/app/controllers/: commerce_async.py
services/commerce_service/app/routes/: __init__.py  main.py  routes.py
services/commerce_service/app/services/: __init__.py  addresses.py  commerce_async.py
(+561 files in other folders)
