[project]
name = "sweetcrust-package"
version = "0.1.0"
description = "Shared infra for SweetCrust FastAPI microservices (import as package.*)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy>=2.0.36",
    "greenlet>=3.0.0",
    "pymysql>=1.1.1",
    "asyncmy>=0.2.9",
    "cryptography>=43.0.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1,<4.1",
    "redis>=5.0.0",
    "httpx>=0.27.0",
]

# Use PYTHONPATH=<backend_v2> so imports are `package.common…`, `package.database…`
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
